--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,6 +8,27 @@
 @import "minimal-mistakes"; // main partials
 
 @font-face {
+  font-family: 'FiraGO';
+  src: url('{{ site.url }}/assets/firago/FiraGO-Regular.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'FiraGO';
+  src: url('{{ site.url }}/assets/firago/FiraGO-Bold.woff2') format('woff2');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'FiraGO';
+  src: url('{{ site.url }}/assets/firago/FiraGO-Italic.woff2') format('woff2');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
   font-family: 'TilburgsAns';
   src: url('{{ site.url }}/assets/tilburgsans/TilburgsAns-Regular.woff') format('woff');
   font-weight: normal;
@@ -21,6 +42,16 @@
   font-style: normal;
 }
 
+body,
+.sidebar li,
+.masthead__inner-wrap,
+.page__footer-follow li,
+.page__footer-copyright,
+.page__meta,
+.pagination--pager {
+  font-family: 'FiraGO', $sans-serif;
+}
+
 h1 {
   font-family: 'TilburgsAns', $sans-serif;
   font-weight: normal;
@@ -31,6 +62,16 @@ h2, h2.archive__item-title {
   font-family: 'TilburgsAns', $sans-serif;
   font-weight: normal;
   font-size: 1.5em;
+}
+
+body,
+.sidebar li,
+.masthead__inner-wrap,
+.page__footer-follow li,
+.page__footer-copyright,
+.page__meta,
+.pagination--pager {
+  font-family: 'FiraGO', $sans-serif;
 }
 
 .sidebar h3.author__name {
